# Synth

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  SoundPlayer.h  synth  synth.cpp
include/: shader.h
include/glad/: glad.h
shaders/: rec_shader.fshader  rec_shader.vshader
src/: SoundPlayer.h  glad.c  rectangle.cpp  rectangle.h  shader.h  synth.cpp
