CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(Synth)

SET(CMAKE_CXX_STANDARD 17)

#set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
#set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
#set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

include_directories(include)

FIND_PACKAGE(OpenGL REQUIRED)

SET(SOURCE_FILES synth.cpp glad.c)

ADD_EXECUTABLE(synth ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(synth glfw dl asound pthread rtaudio X11)